--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://devanshusinghrawat.github.io/Slideshow-React",
   "name": "slideshow",
   "version": "0.1.0",
   "private": true,
